--- a/index.html
+++ b/index.html
@@ -9,107 +9,107 @@
 
 
 
-<h1>Обзор Calculated.</h1>
-<h3>Что такое Calculated.</h3>
-<p>Calculated - это ваш помощник в задачах различной деятельности и бизнесе. Создавайте готовые к использованию документы или черновые версии документов. Ведите учет или планируйте деятельность. Далее в рецептах, ниже приведены примеры использования приложения под различные задачи.
+<h1>РћР±Р·РѕСЂ Calculated.</h1>
+<h3>Р§С‚Рѕ С‚Р°РєРѕРµ Calculated.</h3>
+<p>Calculated - СЌС‚Рѕ РІР°С€ РїРѕРјРѕС‰РЅРёРє РІ Р·Р°РґР°С‡Р°С… СЂР°Р·Р»РёС‡РЅРѕР№ РґРµСЏС‚РµР»СЊРЅРѕСЃС‚Рё Рё Р±РёР·РЅРµСЃРµ. РЎРѕР·РґР°РІР°Р№С‚Рµ РіРѕС‚РѕРІС‹Рµ Рє РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЋ РґРѕРєСѓРјРµРЅС‚С‹ РёР»Рё С‡РµСЂРЅРѕРІС‹Рµ РІРµСЂСЃРёРё РґРѕРєСѓРјРµРЅС‚РѕРІ. Р’РµРґРёС‚Рµ СѓС‡РµС‚ РёР»Рё РїР»Р°РЅРёСЂСѓР№С‚Рµ РґРµСЏС‚РµР»СЊРЅРѕСЃС‚СЊ. Р”Р°Р»РµРµ РІ СЂРµС†РµРїС‚Р°С…, РЅРёР¶Рµ РїСЂРёРІРµРґРµРЅС‹ РїСЂРёРјРµСЂС‹ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ РїСЂРёР»РѕР¶РµРЅРёСЏ РїРѕРґ СЂР°Р·Р»РёС‡РЅС‹Рµ Р·Р°РґР°С‡Рё.
 </p>
-<h3>Хранение данных.</h3>
-<p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Всю обязанность по приватности и сохранению данных пользователь берет на себя.
+<h3>РҐСЂР°РЅРµРЅРёРµ РґР°РЅРЅС‹С….</h3>
+<p>Р’Р°С€Рё РґР°РЅРЅС‹Рµ С…СЂР°РЅСЏС‚СЃСЏ РЅР° РІР°С€РµРј СѓСЃС‚СЂРѕР№СЃС‚РІРµ Рё РЅРёРєСѓРґР° РЅРµ РїРµСЂРµРґР°СЋС‚СЃСЏ. Р’СЃСЋ РѕР±СЏР·Р°РЅРЅРѕСЃС‚СЊ РїРѕ РїСЂРёРІР°С‚РЅРѕСЃС‚Рё Рё СЃРѕС…СЂР°РЅРµРЅРёСЋ РґР°РЅРЅС‹С… РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ Р±РµСЂРµС‚ РЅР° СЃРµР±СЏ.
 </p>
-<h3>Платформы.</h3>
-<p>В текущий момент приложение работает под андроид версии 29 и выше. Планируется так же выхож под айтюнс.
+<h3>РџР»Р°С‚С„РѕСЂРјС‹.</h3>
+<p>Р’ С‚РµРєСѓС‰РёР№ РјРѕРјРµРЅС‚ РїСЂРёР»РѕР¶РµРЅРёРµ СЂР°Р±РѕС‚Р°РµС‚ РїРѕРґ Р°РЅРґСЂРѕРёРґ РІРµСЂСЃРёРё 29 Рё РІС‹С€Рµ. РџР»Р°РЅРёСЂСѓРµС‚СЃСЏ С‚Р°Рє Р¶Рµ РІС‹С…РѕР¶ РїРѕРґ Р°Р№С‚СЋРЅСЃ.
 </p>
 
-<h1>Работа с приложением</h1>
-<h3>Управление элементами</h3>
-<p><font color="#c9211e">Все изменения сохраняются сразу и автоматически. </font><br />
-Для редактирования смахните блок вправо -
+<h1>Р Р°Р±РѕС‚Р° СЃ РїСЂРёР»РѕР¶РµРЅРёРµРј</h1>
+<h3>РЈРїСЂР°РІР»РµРЅРёРµ СЌР»РµРјРµРЅС‚Р°РјРё</h3>
+<p><font color="#c9211e">Р’СЃРµ РёР·РјРµРЅРµРЅРёСЏ СЃРѕС…СЂР°РЅСЏСЋС‚СЃСЏ СЃСЂР°Р·Сѓ Рё Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё. </font><br />
+Р”Р»СЏ СЂРµРґР°РєС‚РёСЂРѕРІР°РЅРёСЏ СЃРјР°С…РЅРёС‚Рµ Р±Р»РѕРє РІРїСЂР°РІРѕ -
 </p>
 <img src="help_html_ab68ed00489625ec.gif" width="183" height="76" border="0"/>
 
-<p>Для удаления смахните блок влево -</p>
+<p>Р”Р»СЏ СѓРґР°Р»РµРЅРёСЏ СЃРјР°С…РЅРёС‚Рµ Р±Р»РѕРє РІР»РµРІРѕ -</p>
 <img src="help_html_24c1afa6d298508b.gif" width="127" height="76" border="0"/>
-<p>Для выделения удерживайте блок некоторое время, для снятия выделения аналогично -</p>
+<p>Р”Р»СЏ РІС‹РґРµР»РµРЅРёСЏ СѓРґРµСЂР¶РёРІР°Р№С‚Рµ Р±Р»РѕРє РЅРµРєРѕС‚РѕСЂРѕРµ РІСЂРµРјСЏ, РґР»СЏ СЃРЅСЏС‚РёСЏ РІС‹РґРµР»РµРЅРёСЏ Р°РЅР°Р»РѕРіРёС‡РЅРѕ -</p>
 <img src="help_html_f33382bf71af2fe4.gif" width="109" height="76" border="0"/>
 
-<p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проект. Дерево проектов состоит из каталогов и элементов.
+<p>РџСЂРё РЅР°Р¶Р°С‚РёРё РЅР° СЌР»РµРјРµРЅС‚ РІС‹ СЃРїСѓСЃРєР°РµС‚РµСЃСЊ РЅР° СѓСЂРѕРІРµРЅСЊ РЅРёР¶Рµ РІ РґРµСЂРµРІРµ РїСЂРѕРµРєС‚. Р”РµСЂРµРІРѕ РїСЂРѕРµРєС‚РѕРІ СЃРѕСЃС‚РѕРёС‚ РёР· РєР°С‚Р°Р»РѕРіРѕРІ Рё СЌР»РµРјРµРЅС‚РѕРІ.
 </p>
-<h3>Каталоги.</h3>
-<p>Каталоги предназначены для удобства сортировки ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
-Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
-Каталогу можно задать наименование и примечание.
+<h3>РљР°С‚Р°Р»РѕРіРё.</h3>
+<p>РљР°С‚Р°Р»РѕРіРё РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅС‹ РґР»СЏ СѓРґРѕР±СЃС‚РІР° СЃРѕСЂС‚РёСЂРѕРІРєРё РІР°С€РёС… РїСЂРѕРµРєС‚РѕРІ. РљР°С‚Р°Р»РѕРі РјРѕР¶РµС‚ СЃРѕРґРµСЂР¶Р°С‚СЊ РІ СЃРµР±Рµ РґСЂСѓРіРёРµ РєР°С‚Р°Р»РѕРіРё РёР»Рё СЌР»РµРјРµРЅС‚С‹.
+Р’С‹ РјРѕР¶РµС‚Рµ РїРµСЂРµРґР°С‚СЊ РІСЃСЋ РёРЅС„РѕСЂРјР°С†РёСЋ РёР· РєР°С‚Р°Р»РѕРіР° РІРєР»СЋС‡Р°СЏ РїРѕРґСЂР°Р·РґРµР»С‹, РґР»СЏ СЌС‚РѕРіРѕ РѕС‚РєСЂРѕР№С‚Рµ РєР°С‚Р°Р»РѕРі РґР»СЏ СЂРµРґР°РєС‚РёСЂРѕРІР°РЅРёСЏ, РІС‹Р±РµСЂРёС‚Рµ РїРѕРґРµР»РёС‚СЊСЃСЏ - С„Р°Р№Р» РґР°РЅРЅС‹С… - clcltd.
+РљР°С‚Р°Р»РѕРіСѓ РјРѕР¶РЅРѕ Р·Р°РґР°С‚СЊ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ Рё РїСЂРёРјРµС‡Р°РЅРёРµ.
 </p>
 <img src="help_html_ced7408be2b53ac0.gif" width="318" height="173" border="0"/>
 
 
-<h3>Элементы.</h3>
-<p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
-Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
-по умолчанию номер задается максимальный в текущем разделе.
-Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводится в случае если задана настройка
-Цвет индивидуальная настройка. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
+<h3>Р­Р»РµРјРµРЅС‚С‹.</h3>
+<p>Р­Р»РµРјРµРЅС‚С‹ РёРјРµСЋС‚ Р±РѕР»РµРµ СЂР°СЃС€РёСЂРµРЅРЅРѕРµ РїСЂРёРјРµРЅРµРЅРёРµ Рё С„СѓРЅРєС†РёРё. РўР°Рє Р¶Рµ РєР°Рє Рё РєР°С‚Р°Р»РѕРіРё СЌР»РµРјРµРЅС‚С‹ РјРѕР¶РЅРѕ РїРµСЂРµРґР°РІР°С‚СЊ РІ РІРёРґРµ С„Р°Р№Р»РѕРІ РґР°РЅРЅС‹С…, Р·Р°РґР°С‚СЊ РёРј РЅР°РёРјРµРЅРѕРІР°РЅРёРµ Рё РїСЂРёРјРµС‡Р°РЅРёРµ. 
+Р”РѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕ СЌР»РµРјРµРЅС‚ РјРѕР¶РЅРѕ РїРµСЂРµРґР°С‚СЊ РІ РѕС‚РєСЂС‹С‚РѕРј С„РѕСЂРјР°С‚Рµ СЌР»РµРєС‚СЂРѕРЅРЅС‹С… РґРѕРєСѓРјРµРЅС‚РѕРІ (PDF) Рё С„РѕСЂРјР°С‚Рµ СЌР»РµРєС‚СЂРѕРЅРЅС‹С… С‚Р°Р±Р»РёС†, РІРєР»СЋС‡Р°СЏ РІСЃРµ РїРѕРґСЂР°Р·РґРµР»С‹. Р•РјСѓ РјРѕР¶РЅРѕ Р·Р°РґР°С‚СЊ РїРѕСЂСЏРґРєРѕРІС‹Р№ РЅРѕРјРµСЂ РІ СЃРїРёСЃРєРµ, 
+РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ РЅРѕРјРµСЂ Р·Р°РґР°РµС‚СЃСЏ РјР°РєСЃРёРјР°Р»СЊРЅС‹Р№ РІ С‚РµРєСѓС‰РµРј СЂР°Р·РґРµР»Рµ.
+РџР°СЂР°РјРµС‚СЂ Р°РєС‚РёРІРµРЅ РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅ РґР»СЏ РІРёР·СѓР°Р»СЊРЅРѕРіРѕ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ, РґР°РЅРЅС‹Р№ СЌР»РµРјРµРЅС‚ Р±СѓРґРµС‚ РІРѕ РІСЃРµС… СЃРїРёСЃРєР°С… РїРѕРјРµС‡РµРЅ РєР°Рє РїРµСЂРµС‡РµСЂРєРЅСѓС‚С‹Р№ РёР»Рё РЅРµ Р±СѓРґРµС‚ РІС‹РІРѕРґРёС‚СЃСЏ РІ СЃР»СѓС‡Р°Рµ РµСЃР»Рё Р·Р°РґР°РЅР° РЅР°СЃС‚СЂРѕР№РєР°
+Р¦РІРµС‚ РёРЅРґРёРІРёРґСѓР°Р»СЊРЅР°СЏ РЅР°СЃС‚СЂРѕР№РєР°. РџРѕРјРµС‡Р°Р№С‚Рµ Р·РЅР°С‡РёРјРѕСЃС‚СЊ РґР°РЅРЅРѕР№ Р·Р°РґР°С‡Рё С†РІРµС‚РѕРј РёР»Рё РёСЃРїРѕР»СЊР·СѓР№С‚Рµ РґР»СЏ РґСЂСѓРіРёС… С†РµР»РµР№.</p>
 <img src="help_html_892bcf12df59e8e9.gif" width="266" height="271" border="0"/>
 
-<p>Экран элемента содержит два дополнительных под экрана - список и итоги. Вкладка список содержит товары и услуги используемые в вашем проекте, добавляйте и удаляйте их по вашей необходимости
+<p>Р­РєСЂР°РЅ СЌР»РµРјРµРЅС‚Р° СЃРѕРґРµСЂР¶РёС‚ РґРІР° РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹С… РїРѕРґ СЌРєСЂР°РЅР° - СЃРїРёСЃРѕРє Рё РёС‚РѕРіРё. Р’РєР»Р°РґРєР° СЃРїРёСЃРѕРє СЃРѕРґРµСЂР¶РёС‚ С‚РѕРІР°СЂС‹ Рё СѓСЃР»СѓРіРё РёСЃРїРѕР»СЊР·СѓРµРјС‹Рµ РІ РІР°С€РµРј РїСЂРѕРµРєС‚Рµ, РґРѕР±Р°РІР»СЏР№С‚Рµ Рё СѓРґР°Р»СЏР№С‚Рµ РёС… РїРѕ РІР°С€РµР№ РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё
 </p>
 <img src="help_html_e17b293a10568ef9.gif" width="286" height="319" border="0"/>
 
-<p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
-Примеры решения различных задач смотрите в рецептах.
-Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входяыт и текущий элемент и все подэлементы
+<p>РџРѕСЃР»Рµ РґРѕР±Р°РІР»РµРЅРёСЏ С‚РѕРІР°СЂРѕРІ РёР»Рё СѓСЃР»СѓРі РІС‹ РјРѕР¶РµС‚Рµ Р·Р°РїРѕР»РЅРёС‚СЊ РЅРµРѕР±С…РѕРґРёРјС‹Рµ РґР»СЏ РІР°СЃ РїРѕР»СЏ: РЅР°РёРјРµРЅРѕРІР°РЅРёРµ, РёР·РјРµСЂРµРЅРёРµ РЅР°РёРјРµРЅРѕРІР°РЅРёСЏ, РєРѕР»РёС‡РµСЃС‚РІРѕ, С†РµРЅР° Р·Р° РµРґРёРЅРёС†Сѓ Рё РІР°Р»СЋС‚Р°. 
+РџСЂРёРјРµСЂС‹ СЂРµС€РµРЅРёСЏ СЂР°Р·Р»РёС‡РЅС‹С… Р·Р°РґР°С‡ СЃРјРѕС‚СЂРёС‚Рµ РІ СЂРµС†РµРїС‚Р°С….
+Р’РєР»Р°РґРєР° РёС‚РѕРіРё СЃРѕРґРµСЂР¶РёС‚ РёС‚РѕРіРѕРІС‹Рµ РґР°РЅРЅС‹Рµ РІСЃРµРіРѕ РґРµСЂРµРІР° РїСЂРѕРµРєС‚Р°, РІ РёС‚РѕРіРё РІС…РѕРґСЏС‹С‚ Рё С‚РµРєСѓС‰РёР№ СЌР»РµРјРµРЅС‚ Рё РІСЃРµ РїРѕРґСЌР»РµРјРµРЅС‚С‹
 </p>
 <img src="help_html_da975ece3a3daa0a.gif" width="308" height="335" border="0"/>
-<p>Вы можете увеличить или уменьшит шрифт в данном отчете, так-же сортировать список по наименованию/количеству, вывести только использованные товары и услуги.
+<p>Р’С‹ РјРѕР¶РµС‚Рµ СѓРІРµР»РёС‡РёС‚СЊ РёР»Рё СѓРјРµРЅСЊС€РёС‚ С€СЂРёС„С‚ РІ РґР°РЅРЅРѕРј РѕС‚С‡РµС‚Рµ, С‚Р°Рє-Р¶Рµ СЃРѕСЂС‚РёСЂРѕРІР°С‚СЊ СЃРїРёСЃРѕРє РїРѕ РЅР°РёРјРµРЅРѕРІР°РЅРёСЋ/РєРѕР»РёС‡РµСЃС‚РІСѓ, РІС‹РІРµСЃС‚Рё С‚РѕР»СЊРєРѕ РёСЃРїРѕР»СЊР·РѕРІР°РЅРЅС‹Рµ С‚РѕРІР°СЂС‹ Рё СѓСЃР»СѓРіРё.
 </p>
 
 
-<h3>Меню.</h3>
-<p>С помощью операций Копировать, Вырезать, Вставить, Выбрать все - управляйте содержанием элементов и каталогов.
-В меню настроек вы можете выбрать язык и задать параметры которые будут отражаться на всех итогах.
+<h3>РњРµРЅСЋ.</h3>
+<p>РЎ РїРѕРјРѕС‰СЊСЋ РѕРїРµСЂР°С†РёР№ РљРѕРїРёСЂРѕРІР°С‚СЊ, Р’С‹СЂРµР·Р°С‚СЊ, Р’СЃС‚Р°РІРёС‚СЊ, Р’С‹Р±СЂР°С‚СЊ РІСЃРµ - СѓРїСЂР°РІР»СЏР№С‚Рµ СЃРѕРґРµСЂР¶Р°РЅРёРµРј СЌР»РµРјРµРЅС‚РѕРІ Рё РєР°С‚Р°Р»РѕРіРѕРІ.
+Р’ РјРµРЅСЋ РЅР°СЃС‚СЂРѕРµРє РІС‹ РјРѕР¶РµС‚Рµ РІС‹Р±СЂР°С‚СЊ СЏР·С‹Рє Рё Р·Р°РґР°С‚СЊ РїР°СЂР°РјРµС‚СЂС‹ РєРѕС‚РѕСЂС‹Рµ Р±СѓРґСѓС‚ РѕС‚СЂР°Р¶Р°С‚СЊСЃСЏ РЅР° РІСЃРµС… РёС‚РѕРіР°С….
 </p>
 
-<h3>Файл данных clcltd.</h3>
-<p>Это файл в формате JSON. Может быть сформирован и передан из любой внешней системы. Формат файла:</p>
+<h3>Р¤Р°Р№Р» РґР°РЅРЅС‹С… clcltd.</h3>
+<p>Р­С‚Рѕ С„Р°Р№Р» РІ С„РѕСЂРјР°С‚Рµ JSON. РњРѕР¶РµС‚ Р±С‹С‚СЊ СЃС„РѕСЂРјРёСЂРѕРІР°РЅ Рё РїРµСЂРµРґР°РЅ РёР· Р»СЋР±РѕР№ РІРЅРµС€РЅРµР№ СЃРёСЃС‚РµРјС‹. Р¤РѕСЂРјР°С‚ С„Р°Р№Р»Р°:</p>
 <pre>
 {
    &quot;e&quot;:[
       {
-         &quot;ElementUUID&quot;:&quot;<b>уникальный идентификатор элемента</b>&quot;,
-         &quot;ElementParentUUID&quot;:&quot;<b>уникальный идентификатор родителя элемента, для элемента верхнего уровня пустое значение</b>&quot;,
-         &quot;ElementName&quot;:&quot;<b>Наименование элемента</b>&quot;,
-         &quot;ElementNote&quot;:&quot;<b>Заметка к элементу</b>&quot;,
+         &quot;ElementUUID&quot;:&quot;<b>СѓРЅРёРєР°Р»СЊРЅС‹Р№ РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ СЌР»РµРјРµРЅС‚Р°</b>&quot;,
+         &quot;ElementParentUUID&quot;:&quot;<b>СѓРЅРёРєР°Р»СЊРЅС‹Р№ РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ СЂРѕРґРёС‚РµР»СЏ СЌР»РµРјРµРЅС‚Р°, РґР»СЏ СЌР»РµРјРµРЅС‚Р° РІРµСЂС…РЅРµРіРѕ СѓСЂРѕРІРЅСЏ РїСѓСЃС‚РѕРµ Р·РЅР°С‡РµРЅРёРµ</b>&quot;,
+         &quot;ElementName&quot;:&quot;<b>РќР°РёРјРµРЅРѕРІР°РЅРёРµ СЌР»РµРјРµРЅС‚Р°</b>&quot;,
+         &quot;ElementNote&quot;:&quot;<b>Р—Р°РјРµС‚РєР° Рє СЌР»РµРјРµРЅС‚Сѓ</b>&quot;,
          &quot;ElementType&quot;:&quot;<b>ElementType.Element, ElementType.Folder</b>&quot;,
-         &quot;ElementCanceled&quot;:<b>0 или 1</b>,
+         &quot;ElementCanceled&quot;:<b>0 РёР»Рё 1</b>,
          &quot;ElementColor&quot;:&quot;<b>red, green, blue, black</b>&quot;,
-         &quot;ElementPosition&quot;:<b>позиция - Integer 0-999.</b>
+         &quot;ElementPosition&quot;:<b>РїРѕР·РёС†РёСЏ - Integer 0-999.</b>
       },.....
    ],
    &quot;ems&quot;:[
       {
-         &quot;ElementUid&quot;:&quot;<b>уникальный идентификатор элемента к которому привязан товар или услуга</b><&quot;,
-         &quot;Uid&quot;:&quot;<b>уникальный идентификатор товара или услуги</b>&quot;,
-         &quot;Name&quot;:&quot;<b>Наименование товара или услуги</b>&quot;,
-         &quot;UnitName&quot;:&quot;<b>Единица измерения</b>&quot;,
-         &quot;UnitOutcomeCnt&quot;:<b>Количество - double</b>,
-         &quot;UnitOutcomeCost&quot;:<b>Стоимость - double</b>,
-         &quot;UnitOutcomeCurr&quot;:&quot;<b>Валюта</b>&quot;
+         &quot;ElementUid&quot;:&quot;<b>СѓРЅРёРєР°Р»СЊРЅС‹Р№ РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ СЌР»РµРјРµРЅС‚Р° Рє РєРѕС‚РѕСЂРѕРјСѓ РїСЂРёРІСЏР·Р°РЅ С‚РѕРІР°СЂ РёР»Рё СѓСЃР»СѓРіР°</b><&quot;,
+         &quot;Uid&quot;:&quot;<b>СѓРЅРёРєР°Р»СЊРЅС‹Р№ РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ С‚РѕРІР°СЂР° РёР»Рё СѓСЃР»СѓРіРё</b>&quot;,
+         &quot;Name&quot;:&quot;<b>РќР°РёРјРµРЅРѕРІР°РЅРёРµ С‚РѕРІР°СЂР° РёР»Рё СѓСЃР»СѓРіРё</b>&quot;,
+         &quot;UnitName&quot;:&quot;<b>Р•РґРёРЅРёС†Р° РёР·РјРµСЂРµРЅРёСЏ</b>&quot;,
+         &quot;UnitOutcomeCnt&quot;:<b>РљРѕР»РёС‡РµСЃС‚РІРѕ - double</b>,
+         &quot;UnitOutcomeCost&quot;:<b>РЎС‚РѕРёРјРѕСЃС‚СЊ - double</b>,
+         &quot;UnitOutcomeCurr&quot;:&quot;<b>Р’Р°Р»СЋС‚Р°</b>&quot;
       },.....
    ]
 }
 </pre>
 
-<h1>Рецепты.</h1>
-<h3>Список дел.</h3>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
+<h1>Р РµС†РµРїС‚С‹.</h1>
+<h3>РЎРїРёСЃРѕРє РґРµР».</h3>
+<p>РћС‚РєСЂРѕР№С‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ Рё РґРѕР±Р°РІСЊС‚Рµ РЅРѕРІС‹Р№ РєР°С‚Р°Р»РѕРі, РЅР°Р¶Р°РІ РєРЅРѕРїРєСѓ &laquo;+&raquo;. Р—Р°РґР°Р№С‚Рµ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ РєР°С‚Р°Р»РѕРіР° - &laquo;РўРµРєСѓС‰РёРµ РґРµР»Р°&raquo;, РґРѕР±Р°РІР»СЏР№С‚Рµ СЌР»РµРјРµРЅС‚С‹ СѓРєР°Р·С‹РІР°СЏ РЅРµРѕР±С…РѕРґРёРјС‹Рµ Р·Р°РґР°С‡Рё.
 </p>
-<h3>Ежедневные расходы / доходы.</h3>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
+<h3>Р•Р¶РµРґРЅРµРІРЅС‹Рµ СЂР°СЃС…РѕРґС‹ / РґРѕС…РѕРґС‹.</h3>
+<p>РћС‚РєСЂРѕР№С‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ Рё РґРѕР±Р°РІСЊС‚Рµ РЅРѕРІС‹Р№ РєР°С‚Р°Р»РѕРі, РЅР°Р¶Р°РІ РєРЅРѕРїРєСѓ &laquo;+&raquo;. Р—Р°РґР°Р№С‚Рµ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ РєР°С‚Р°Р»РѕРіР° - &laquo;Р Р°СЃС…РѕРґС‹&raquo; РёР»Рё &laquo;Р”РѕС…РѕРґС‹&raquo;, РЅР°Р¶РјРёС‚Рµ РєРЅРѕРїРєСѓ РЅР°Р·Р°Рґ. РќР°Р¶РјРёС‚Рµ РЅР° СЃРѕР·РґР°РЅРЅС‹Р№ РєР°С‚Р°Р»РѕРі, РѕРїСѓСЃС‚РёРІС€РёСЃСЊ РІ СЃРѕРґРµСЂР¶Р°РЅРёРµ РєР°С‚Р°Р»РѕРіР° СЃРѕР·РґР°Р№С‚Рµ СЌР»РµРјРµРЅС‚, Р·Р°РґР°Р№С‚Рµ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ СЌР»РµРјРµРЅС‚Р°, РЅР°РїСЂРёРјРµСЂ - &laquo;РђРїСЂРµР»СЊ&raquo;. РќР°Р¶РјРёС‚Рµ РєРЅРѕРїРєСѓ РЅР°Р·Р°Рґ Рё Р·Р°С‚РµРј РЅР°Р¶РјРёС‚Рµ РЅР° РІРЅРѕРІСЊ СЃРѕР·РґР°РЅРЅС‹Р№ СЌР»РµРјРµРЅС‚. РЎРѕР·РґР°Р№С‚Рµ РЅРѕРІС‹Р№ СЌР»РµРјРµРЅС‚ СЃ РґР°С‚РѕР№ СЂР°СЃС…РѕРґРѕРІ, РЅР°РїСЂРёРјРµСЂ - &laquo;01&raquo;. Р’ СЃРѕРґРµСЂР¶Р°РЅРёРё СЌР»РµРјРµРЅС‚Р° РїРµСЂРµРєР»СЋС‡РёС‚РµСЃСЊ РЅР° РІРєР»Р°РґРєСѓ СЃРїРёСЃРѕРє, РґРѕР±Р°РІР»СЏР№С‚Рµ С‚РѕРІР°СЂС‹ Рё СѓСЃР»СѓРіРё СѓРєР°Р·С‹РІР°СЏ: РЅР°РёРјРµРЅРѕРІР°РЅРёРµ, РµРґРёРЅРёС†С‹ РёР·РјРµСЂРµРЅРёСЏ, РєРѕР»РёС‡РµСЃС‚РІРѕ, С†РµРЅСѓ Р·Р° РµРґРёРЅРёС†Сѓ Рё РІР°Р»СЋС‚Сѓ. Р’С‹ РјРѕР¶РµС‚Рµ РЅРµ СѓРєР°Р·С‹РІР°С‚СЊ СЃС‚РѕРёРјРѕСЃС‚СЊ С‚РѕРІР°СЂР° Р·Р° РµРґРёРЅРёС†Сѓ, РјРѕР¶РЅРѕ РІРЅРµСЃС‚Рё С‚РѕР»СЊРєРѕ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ С‚РѕРІР°СЂР° РёР»Рё СѓСЃР»СѓРіРё, Р° РІ РµРґРёРЅРёС†Рµ РёР·РјРµСЂРµРЅРёСЏ РІРЅРµСЃС‚Рё РІР°Р»СЋС‚Сѓ Рё РІ РєРѕР»РёС‡РµСЃС‚РІРµ СѓРєР°Р·Р°С‚СЊ РєРѕР»РёС‡РµСЃС‚РІРѕ РІР°Р»СЋС‚С‹. Р’ СЃРѕРґРµСЂР¶Р°РЅРёРё СЌР»РµРјРµРЅС‚Р° &laquo;РђРїСЂРµР»СЊ&raquo;, РЅР° РІРєР»Р°РґРєРµ РёС‚РѕРіРё СЃРјРѕС‚СЂРёС‚Рµ РёС‚РѕРіРё Рё СЃРѕРґРµСЂР¶Р°РЅРёРµ РІСЃРµС… РґРЅРµР№.
 </p>
-<h3>Инвойсы< / Заявки / Прайс листы.</h3>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс листы овощей и фруктов.
+<h3>РРЅРІРѕР№СЃС‹< / Р—Р°СЏРІРєРё / РџСЂР°Р№СЃ Р»РёСЃС‚С‹.</h3>
+<p>РћС‚РєСЂРѕР№С‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ Рё РґРѕР±Р°РІСЊС‚Рµ РЅРѕРІС‹Р№ РєР°С‚Р°Р»РѕРі, РЅР°Р¶Р°РІ РєРЅРѕРїРєСѓ &laquo;+&raquo;. РќР°Р¶РјРёС‚Рµ РЅР° СЃРѕР·РґР°РЅРЅС‹Р№ РєР°С‚Р°Р»РѕРі, РѕРїСѓСЃС‚РёРІС€РёСЃСЊ РІ СЃРѕРґРµСЂР¶Р°РЅРёРµ РєР°С‚Р°Р»РѕРіР° СЃРѕР·РґР°Р№С‚Рµ СЌР»РµРјРµРЅС‚, Р·Р°РґР°Р№С‚Рµ Р»СЋР±РѕРµ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ СЌР»РµРјРµРЅС‚Р°, РЅР°РїСЂРёРјРµСЂ &mdash; РЅР°РёРјРµРЅРѕРІР°РЅРёРµ РєРѕРЅС‚СЂР°РіРµРЅС‚Р° РёР»Рё РїСЂР°Р№СЃ Р»РёСЃС‚Р°. Р’ СЃРѕРґРµСЂР¶Р°РЅРёРё СЌР»РµРјРµРЅС‚Р° РїРµСЂРµРєР»СЋС‡РёС‚РµСЃСЊ РЅР° РІРєР»Р°РґРєСѓ СЃРїРёСЃРѕРє, РґРѕР±Р°РІР»СЏР№С‚Рµ С‚РѕРІР°СЂС‹ Рё СѓСЃР»СѓРіРё СѓРєР°Р·С‹РІР°СЏ: РЅР°РёРјРµРЅРѕРІР°РЅРёРµ, РµРґРёРЅРёС†С‹ РёР·РјРµСЂРµРЅРёСЏ, РєРѕР»РёС‡РµСЃС‚РІРѕ, С†РµРЅСѓ Р·Р° РµРґРёРЅРёС†Сѓ Рё РІР°Р»СЋС‚Сѓ. РџРѕ Р·Р°РІРµСЂС€РµРЅРёРё РјРѕР¶РµС‚Рµ РїРµСЂРµРґР°С‚СЊ РґРѕРєСѓРјРµРЅС‚ РІ С„РѕСЂРјР°С‚Рµ PDF, XLS РёР»Рё РІС‹РіСЂСѓР·РёС‚СЊ С„Р°Р№Р» РґР°РЅРЅС‹С… РІР°С€РёРј РєРѕР»Р»РµРіР°Рј. РњРѕР¶РµС‚Рµ СЃРґРµР»Р°С‚СЊ РґРµРєРѕРјРїРѕР·РёС†РёСЋ РґР°РЅРЅРѕРіРѕ СЌР»РµРјРµРЅС‚Р° РЅР°РїСЂРёРјРµСЂ РѕС‚РґРµР»РёРІ РїСЂР°Р№СЃ Р»РёСЃС‚С‹ РѕРІРѕС‰РµР№ Рё С„СЂСѓРєС‚РѕРІ.
 </p>
-<h3>Планирование / ремонты / сметы.</h3>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
+<h3>РџР»Р°РЅРёСЂРѕРІР°РЅРёРµ / СЂРµРјРѕРЅС‚С‹ / СЃРјРµС‚С‹.</h3>
+<p>РћС‚РєСЂРѕР№С‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ Рё РґРѕР±Р°РІСЊС‚Рµ РЅРѕРІС‹Р№ РєР°С‚Р°Р»РѕРі, РЅР°Р¶Р°РІ РєРЅРѕРїРєСѓ &laquo;+&raquo;. РќР°Р¶РјРёС‚Рµ РЅР° СЃРѕР·РґР°РЅРЅС‹Р№ РєР°С‚Р°Р»РѕРі, РѕРїСѓСЃС‚РёРІС€РёСЃСЊ РІ СЃРѕРґРµСЂР¶Р°РЅРёРµ РєР°С‚Р°Р»РѕРіР° СЃРѕР·РґР°Р№С‚Рµ СЌР»РµРјРµРЅС‚, Р·Р°РґР°Р№С‚Рµ Р»СЋР±РѕРµ РЅР°РёРјРµРЅРѕРІР°РЅРёРµ СЌР»РµРјРµРЅС‚Р°, РЅР°РїСЂРёРјРµСЂ &mdash; РїР»Р°РЅРёСЂРѕРІР°РЅРёРµ / СЂРµРјРѕРЅС‚ / СЃРјРµС‚Р°. РџРµСЂРµР№РґРёС‚Рµ РІ СЂР°Р·РґРµР» СЃРїРёСЃРѕРє Рё РІРЅРѕСЃРёС‚Рµ РЅРµРѕР±С…РѕРґРёРјС‹Рµ РјР°С‚РµСЂРёР°Р»С‹, СѓСЃР»СѓРіРё. РњРѕР¶РµС‚Рµ СЃРґРµР»Р°С‚СЊ РґРµРєРѕРјРїРѕР·РёС†РёСЋ РґР°РЅРЅРѕРіРѕ СЌР»РµРјРµРЅС‚Р° РЅР°РїСЂРёРјРµСЂ РѕС‚РґРµР»РёРІ СЂРµРјРѕРЅС‚ СЃРїР°Р»СЊРЅРё Рё РїСЂРёС…РѕР¶РµР№.
 </p>
 
 
