--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <html>
    <head>
-      <meta http-equiv="content-type" content="text/html; charset=windows-1251"/>
       <title>Calculated</title>
-	  <meta charset="utf-8"/>
-
+	  <meta http-equiv="content-type" content="text/html; utf-8">
    </head>
-   <body  dir="ltr">
-
-
-
+   <body>
 <h1>Обзор Calculated.</h1>
 <h3>Что такое Calculated.</h3>
 <p>Calculated - это ваш помощник в задачах различной деятельности и бизнесе. Создавайте готовые к использованию документы или черновые версии документов. Ведите учет или планируйте деятельность. Далее в рецептах, ниже приведены примеры использования приложения под различные задачи.
