--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
    <head>
       <title>Calculated</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	  <style>
+   body { 
+    margin: 35;
+}
+img {
+  -webkit-filter: drop-shadow(1px 1px 1px #222);
+  filter: drop-shadow(1px 1px 1px #222);
+}	
+  </style>
    </head>
    <body>
-<h1>Обзор Calculated.</h1>
+  <a href="#overview">Обзор Calculated</a> | 
+  <a href="#work">Работа с приложением</a> | 
+  <a href="#examples">Использование приложения</a> | 
+  <a href="#examples">English.</a>
+<h1 id="overview">Обзор Calculated.</h1>
 <h3>Что такое Calculated.</h3>
-<p>Calculated - это ваш помощник в задачах различной деятельности и бизнесе. Создавайте готовые к использованию документы или черновые версии документов. Ведите учет или планируйте деятельность. Далее в рецептах, ниже приведены примеры использования приложения под различные задачи.
+<p>Calculated - это ваш помощник в вашей деятельности, бизнесе и иных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
+Ведите учет или планируйте деятельность. Далее в рецептах, ниже приведены примеры использования приложения под различные задачи.
 </p>
 <h3>Хранение данных.</h3>
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Всю обязанность по приватности и сохранению данных пользователь берет на себя.
@@ -15,19 +30,19 @@
 <p>В текущий момент приложение работает под андроид версии 29 и выше. Планируется так же выхож под айтюнс.
 </p>
 
-<h1>Работа с приложением</h1>
+<h1 id="work">Работа с приложением.</h1>
 <h3>Управление элементами</h3>
 <p><font color="#c9211e">Все изменения сохраняются сразу и автоматически. </font><br />
-Для редактирования смахните блок вправо -
+Для редактирования смахните каталог/элемент вправо -
 </p>
 <img src="help_html_ab68ed00489625ec.gif" width="183" height="76" border="0"/>
 
-<p>Для удаления смахните блок влево -</p>
+<p>Для удаления смахните каталог/элемент влево -</p>
 <img src="help_html_24c1afa6d298508b.gif" width="127" height="76" border="0"/>
-<p>Для выделения удерживайте блок некоторое время, для снятия выделения аналогично -</p>
+<p>Для выделения удерживайте каталог/элемент некоторое время, для снятия выделения аналогично -</p>
 <img src="help_html_f33382bf71af2fe4.gif" width="109" height="76" border="0"/>
 
-<p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проект. Дерево проектов состоит из каталогов и элементов.
+<p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
 </p>
 <h3>Каталоги.</h3>
 <p>Каталоги предназначены для удобства сортировки ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
@@ -93,7 +108,7 @@
 }
 </pre>
 
-<h1>Рецепты.</h1>
+<h1 id="examples">Рецепты.</h1>
 <h3>Список дел.</h3>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
