--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ img {
 <h1 id="overview">Обзор Calculated.</h1>
 <h3>Что такое Calculated.</h3>
 <p>Calculated - это ваш помощник в вашей деятельности, бизнесе и иных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
-Ведите учет или планируйте деятельность. Далее в рецептах, ниже приведены примеры использования приложения под различные задачи.
+Ведите учет или планируйте деятельность.
 </p>
 <h3>Хранение данных.</h3>
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Всю обязанность по приватности и сохранению данных пользователь берет на себя.
