--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img {
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
 </p>
 <h4>Платформы.</h4>
-<p>В текущий момент приложение работает под Android версии 10 и выше. Планируется так же выпуск под IOS, об этом событии будет объявленно заранее.
+<p>В текущий момент приложение работает под Android версии 10 и выше. Планируется так же выпуск под IOS, об этом событии будет объявлено заранее.
 </p>
 
 <h3 id="work">Работа с приложением.</h3>
@@ -35,13 +35,13 @@ img {
 <p><font color="#c9211e">Все изменения сохраняются сразу и автоматически. </font><br />
 Для редактирования смахните элемент вправо -
 </p>
-<img src="help_html_ab68ed00489625ec.gif" width="183" height="76" border="0"/>
+<img src="help_html_ab68ed00489625ec.png" width="183" height="76" border="0"/>
 
 <p>Для удаления смахните элемент влево -</p>
-<img src="help_html_24c1afa6d298508b.gif" width="127" height="76" border="0"/>
+<img src="help_html_24c1afa6d298508b.png" width="127" height="76" border="0"/>
 <p>Для выделения или снятия выделения удерживайте элемент некоторое время 
 -</p>
-<img src="help_html_f33382bf71af2fe4.gif" width="109" height="76" border="0"/>
+<img src="help_html_f33382bf71af2fe4.png" width="109" height="76" border="0"/>
 
 <p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
 </p>
@@ -50,26 +50,26 @@ img {
 Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
 Каталогу можно задать наименование и примечание.
 </p>
-<img src="help_html_ced7408be2b53ac0.gif" width="318" height="173" border="0"/>
+<img src="help_html_ced7408be2b53ac0.png" width="318" height="173" border="0"/>
 
 
 <h4>Элементы.</h4>
 <p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
 Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
 по умолчанию номер задается максимальный в текущем разделе.
-Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводится в случае если задана настройка
+Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка
 Цвет устанавливайте по желанию. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
-<img src="help_html_892bcf12df59e8e9.gif" width="266" height="271" border="0"/>
+<img src="help_html_892bcf12df59e8e9.png" width="266" height="271" border="0"/>
 
 <p>Экран элемента содержит два дополнительных под экрана - список и итоги. Вкладка список содержит товары и услуги используемые в вашем проекте, добавляйте и удаляйте их по вашей необходимости
 </p>
-<img src="help_html_e17b293a10568ef9.gif" width="286" height="319" border="0"/>
+<img src="help_html_e17b293a10568ef9.png" width="286" height="319" border="0"/>
 
 <p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
 Примеры решения различных задач смотрите в разделе - <a href="#examples">Использование приложения</a>.
-Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входяыт и текущий элемент и все подэлементы
+Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входят и текущий элемент и все под элементы.
 </p>
-<img src="help_html_da975ece3a3daa0a.gif" width="308" height="335" border="0"/>
+<img src="help_html_da975ece3a3daa0a.png" width="308" height="335" border="0"/>
 <p>Вы можете увеличить или уменьшит шрифт в данном отчете, так-же сортировать список по наименованию/количеству.
 </p>
 
@@ -116,8 +116,8 @@ img {
 <h4>Ежедневные расходы / доходы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
 </p>
-<h4>Инвойсы< / Заявки / Прайс листы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс листы овощей и фруктов.
+<h4>Инвойсы< / Заявки / Прайс-листы.</h4>
+<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
 </p>
 <h4>Планирование / ремонты / сметы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
