--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ img {
 <p><font color="#c9211e">Все изменения сохраняются сразу и автоматически. </font><br />
 Для редактирования смахните элемент вправо -
 </p>
-<img src="help_html_ab68ed00489625ec.png" width="183" height="76" border="0"/>
+<img src="help_html_ab68ed00489625ec.png"  border="0"/>
 
 <p>Для удаления смахните элемент влево -</p>
-<img src="help_html_24c1afa6d298508b.png" width="127" height="76" border="0"/>
+<img src="help_html_24c1afa6d298508b.png"  border="0"/>
 <p>Для выделения или снятия выделения удерживайте элемент некоторое время 
 -</p>
-<img src="help_html_f33382bf71af2fe4.png" width="109" height="76" border="0"/>
+<img src="help_html_f33382bf71af2fe4.png"  border="0"/>
 
 <p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
 </p>
@@ -50,7 +50,7 @@ img {
 Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
 Каталогу можно задать наименование и примечание.
 </p>
-<img src="help_html_ced7408be2b53ac0.png" width="318" height="173" border="0"/>
+<img src="help_html_ced7408be2b53ac0.png"  border="0"/>
 
 
 <h4>Элементы.</h4>
@@ -59,17 +59,17 @@ img {
 по умолчанию номер задается максимальный в текущем разделе.
 Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка
 Цвет устанавливайте по желанию. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
-<img src="help_html_892bcf12df59e8e9.png" width="266" height="271" border="0"/>
+<img src="help_html_892bcf12df59e8e9.png"  border="0"/>
 
 <p>Экран элемента содержит два дополнительных под экрана - список и итоги. Вкладка список содержит товары и услуги используемые в вашем проекте, добавляйте и удаляйте их по вашей необходимости
 </p>
-<img src="help_html_e17b293a10568ef9.png" width="286" height="319" border="0"/>
+<img src="help_html_e17b293a10568ef9.png"  border="0"/>
 
 <p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
 Примеры решения различных задач смотрите в разделе - <a href="#examples">Использование приложения</a>.
 Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входят и текущий элемент и все под элементы.
 </p>
-<img src="help_html_da975ece3a3daa0a.png" width="308" height="335" border="0"/>
+<img src="help_html_da975ece3a3daa0a.png"  border="0"/>
 <p>Вы можете увеличить или уменьшит шрифт в данном отчете, так-же сортировать список по наименованию/количеству.
 </p>
 
@@ -111,8 +111,9 @@ img {
 
 <h3 id="examples">Использование приложения.</h3>
 <h4>Список дел.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
+<p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
+<img src="todo.png"  border="0"/>
 <h4>Ежедневные расходы / доходы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
 </p>
