--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img {
    <body>
   <a href="#overview">Обзор Calculated</a> | 
   <a href="#work">Работа с приложением</a> | 
-  <a href="#examples">Использование приложения</a> |  
+  <a href="#examples">Примеры использования</a> |  
   <a href="#examples">Eng</a>
 <h3 id="overview">Обзор Calculated.</h3>
 <h4>Что такое Calculated.</h4>
@@ -32,21 +32,17 @@ img {
 
 <h3 id="work">Работа с приложением.</h3>
 <h4>Управление элементами</h4>
-<p><font color="#c9211e">Все изменения сохраняются сразу и автоматически. </font><br />
-Для редактирования смахните элемент вправо -
+<p><font color="#c9211e">Все изменения сохраняются сразу и автоматически.</font><br />
+Для редактирования смахните элемент вправо.<br />
+Для удаления смахните элемент влево.<br />
+Для выделения или снятия выделения удерживайте элемент некоторое время.<br />
 </p>
-<img src="help_html_ab68ed00489625ec.png"  border="0"/>
-
-<p>Для удаления смахните элемент влево -</p>
-<img src="help_html_24c1afa6d298508b.png"  border="0"/>
-<p>Для выделения или снятия выделения удерживайте элемент некоторое время 
--</p>
-<img src="help_html_f33382bf71af2fe4.png"  border="0"/>
+<img src="edit.png"  border="0"/>
 
 <p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
 </p>
-<h4>Каталоги.</h4>
-<p>Каталоги предназначены для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
+<h4>Каталог.</h4>
+<p>Каталог предназначен для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
 Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
 Каталогу можно задать наименование и примечание.
 </p>
@@ -66,7 +62,7 @@ img {
 <img src="help_html_e17b293a10568ef9.png"  border="0"/>
 
 <p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
-Примеры решения различных задач смотрите в разделе - <a href="#examples">Использование приложения</a>.
+Примеры решения различных задач смотрите в разделе - <a href="#examples">Примеры использования</a>.
 Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входят и текущий элемент и все под элементы.
 </p>
 <img src="help_html_da975ece3a3daa0a.png"  border="0"/>
@@ -109,7 +105,7 @@ img {
 }
 </pre>
 
-<h3 id="examples">Использование приложения.</h3>
+<h3 id="examples">Примеры использования.</h3>
 <h4>Список дел.</h4>
 <p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
@@ -117,13 +113,15 @@ img {
 <h4>Ежедневные расходы / доходы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
 </p>
+<img src="expens.png"  border="0"/>
 <h4>Инвойсы< / Заявки / Прайс-листы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
 </p>
+<img src="invoice.png"  border="0"/>
 <h4>Планирование / ремонты / сметы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
 </p>
-
+<img src="repair.png"  border="0"/>
 
    </body>
 </html>
