--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ img {
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
 </p>
 <img src="expens.png"  border="0"/>
-<h4>Инвойсы< / Заявки / Прайс-листы.</h4>
+<h4>Инвойсы / Заявки / Прайс-листы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
 </p>
 <img src="invoice.png"  border="0"/>
