--- a/eng.html
+++ b/eng.html
@@ -17,7 +17,7 @@ img {
   <a href="#overview">Обзор Calculated</a> | 
   <a href="#work">Работа с приложением</a> | 
   <a href="#examples">Примеры использования</a> |  
-  <a href="eng">Eng</a>
+  <a href="ru">Русс</a>
 <h3 id="overview">Обзор Calculated.</h3>
 <h4>Что такое Calculated.</h4>
 <p>Calculated - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
