--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ img {
 
 <h3 id="examples">Примеры использования.</h3>
 <h4>Список дел.</h4>
-<p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
+<p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
 <img src="todo.png"  border="0"/>
 <h4>Ежедневные расходы / доходы.</h4>
