--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ img {
 </p>
 <h4>Каталог.</h4>
 <p>Каталог предназначен для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
-Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
+Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог на редактирования, выберите поделиться - файл данных - clcltd.
 Каталогу можно задать наименование и примечание.
 </p>
 <img src="help_html_ced7408be2b53ac0.png"  border="0"/>
@@ -104,7 +104,9 @@ img {
    ]
 }
 </pre>
-
+<h4>Архивирование данных.</h4>
+<p>Для создания резервной копии ваших данных - выгрузите каталог или элемент в файл данных clcltd и сохраните его в любом удобном для вас месте. Далее при необходимости загрузите его снова.
+</p>
 <h3 id="examples">Примеры использования.</h3>
 <h4>Список дел.</h4>
 <p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
