--- a/index.html
+++ b/index.html
@@ -2,129 +2,9 @@
    <head>
       <title>Calculated</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-	  <style>
-   body { 
-    margin: 35;
-}
-img {
-  -webkit-filter: drop-shadow(1px 1px 1px #222);
-  filter: drop-shadow(1px 1px 1px #222);
-}	
-  </style>
+	  <meta http-equiv="refresh" content="0;URL=https://clclt3d.github.io/eng" />
+
    </head>
    <body>
-  <a href="#overview">Обзор Calculated</a> | 
-  <a href="#work">Работа с приложением</a> | 
-  <a href="#examples">Примеры использования</a> |  
-  <a href="#examples">Eng</a>
-<h3 id="overview">Обзор Calculated.</h3>
-<h4>Что такое Calculated.</h4>
-<p>Calculated - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
-Ведите учет или планируйте деятельность.
-</p>
-<h4>Хранение данных.</h4>
-<p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
-</p>
-<h4>Платформы.</h4>
-<p>В текущий момент приложение работает под Android версии 10 и выше. Планируется так же выпуск под IOS, об этом событии будет объявлено заранее.
-</p>
-
-<h3 id="work">Работа с приложением.</h3>
-<h4>Управление элементами</h4>
-<p><font color="#c9211e">Все изменения сохраняются сразу и автоматически.</font><br />
-Для редактирования смахните элемент вправо.<br />
-Для удаления смахните элемент влево.<br />
-Для выделения или снятия выделения удерживайте элемент некоторое время.<br />
-</p>
-<img src="edit.png"  border="0"/>
-
-<p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
-</p>
-<h4>Каталог.</h4>
-<p>Каталог предназначен для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
-Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог на редактирования, выберите поделиться - файл данных - clcltd.
-Каталогу можно задать наименование и примечание.
-</p>
-<img src="help_html_ced7408be2b53ac0.png"  border="0"/>
-
-
-<h4>Элементы.</h4>
-<p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
-Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
-по умолчанию номер задается максимальный в текущем разделе.
-Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка
-Цвет устанавливайте по желанию. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
-<img src="help_html_892bcf12df59e8e9.png"  border="0"/>
-
-<p>Экран элемента содержит два дополнительных под экрана - список и итоги. Вкладка список содержит товары и услуги используемые в вашем проекте, добавляйте и удаляйте их по вашей необходимости
-</p>
-<img src="help_html_e17b293a10568ef9.png"  border="0"/>
-
-<p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
-Примеры решения различных задач смотрите в разделе - <a href="#examples">Примеры использования</a>.
-Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входят и текущий элемент и все под элементы.
-</p>
-<img src="help_html_da975ece3a3daa0a.png"  border="0"/>
-<p>Вы можете увеличить или уменьшит шрифт в данном отчете, так-же сортировать список по наименованию/количеству.
-</p>
-
-
-<h4>Меню.</h4>
-<p>С помощью операций Копировать, Вырезать, Вставить, Выбрать все - управляйте содержанием элементов и каталогов.
-В меню настроек вы можете выбрать язык и задать параметры которые будут отражаться на всех итогах.
-</p>
-
-<h4>Файл данных clcltd.</h4>
-<p>Это файл в формате JSON. Может быть сформирован и передан из любой внешней системы. Формат файла:</p>
-<pre>
-{
-   &quot;e&quot;:[
-      {
-         &quot;ElementUUID&quot;:&quot;<b>уникальный идентификатор элемента</b>&quot;,
-         &quot;ElementParentUUID&quot;:&quot;<b>уникальный идентификатор родителя элемента, для элемента верхнего уровня пустое значение</b>&quot;,
-         &quot;ElementName&quot;:&quot;<b>Наименование элемента</b>&quot;,
-         &quot;ElementNote&quot;:&quot;<b>Заметка к элементу</b>&quot;,
-         &quot;ElementType&quot;:&quot;<b>ElementType.Element, ElementType.Folder</b>&quot;,
-         &quot;ElementCanceled&quot;:<b>0 или 1</b>,
-         &quot;ElementColor&quot;:&quot;<b>red, green, blue, black</b>&quot;,
-         &quot;ElementPosition&quot;:<b>позиция - Integer 0-999.</b>
-      },.....
-   ],
-   &quot;ems&quot;:[
-      {
-         &quot;ElementUid&quot;:&quot;<b>уникальный идентификатор элемента к которому привязан товар или услуга</b>&quot;,
-         &quot;Uid&quot;:&quot;<b>уникальный идентификатор товара или услуги</b>&quot;,
-         &quot;Name&quot;:&quot;<b>Наименование товара или услуги</b>&quot;,
-         &quot;UnitName&quot;:&quot;<b>Единица измерения</b>&quot;,
-         &quot;UnitOutcomeCnt&quot;:<b>Количество - double</b>,
-         &quot;UnitOutcomeCost&quot;:<b>Стоимость - double</b>,
-         &quot;UnitOutcomeCurr&quot;:&quot;<b>Валюта</b>&quot;
-      },.....
-   ]
-}
-</pre>
-<h4>Архивирование данных.</h4>
-<p>Для создания резервной копии ваших данных - выгрузите каталог или элемент в файл данных clcltd и сохраните его в любом удобном для вас месте. Далее при необходимости загрузите его снова.
-</p>
-<h3 id="examples">Примеры использования.</h3>
-<h4>Список дел.</h4>
-<p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
-</p>
-<img src="todo.png"  border="0"/>
-<h4>Ежедневные расходы / доходы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
-</p>
-<img src="expens.png"  border="0"/>
-<h4>Инвойсы / Заявки / Прайс-листы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
-</p>
-<img src="invoice.png"  border="0"/>
-<h4>Планирование / ремонты / сметы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
-</p>
-<img src="repair.png"  border="0"/>
-
-   </body>
 </html>
 
